force-app/main/default/objects/vlocity_ins__AssetTerm__c/vlocity_ins__AssetTerm__c.object-meta.xml
<CustomObject>
    <description>Policy Terms object represents financial policy terms (e.g. Limits, Deductibles) for the Policy and Policy Coverages. Master-detail chid object of the Policy (Asset).</description>
    <label>Policy Terms</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Terms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>