force-app/main/default/objects/vlocity_ins__AssetTerm__c/fields/vlocity_ins__AttributeSubType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AttributeSubType__c</fullName>
    <formula>vlocity_ins__AttributeId__r.vlocity_ins__SubType__c</formula>
    <label>Benefit Type</label>
    <type>Text</type>
</CustomField>