force-app/main/default/objects/vlocity_ins__AssetTerm__c/fields/vlocity_ins__DurationType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DurationType__c</fullName>
    <formula>TEXT(vlocity_ins__AttributeId__r.vlocity_ins__DurationType__c)</formula>
    <label>Duration Type</label>
    <type>Text</type>
</CustomField>