force-app/main/default/objects/vlocity_ins__AssetTerm__c/fields/vlocity_ins__EffectiveYear__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__EffectiveYear__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Effective Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>