force-app/main/default/objects/vlocity_ins__AssetTerm__c/fields/vlocity_ins__ReferencePolicyNumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ReferencePolicyNumber__c</fullName>
    <formula>vlocity_ins__AssetId__r.vlocity_ins__ReferencePolicyNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reference Policy Number</label>
    <type>Text</type>
</CustomField>