force-app/main/default/objects/vlocity_ins__AssetTerm__c/validationRules/vlocity_ins__EffectiveYearValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_ins__EffectiveYearValidation</fullName>
    <active>true</active>
    <errorConditionFormula>(VALUE(vlocity_ins__EffectiveYear__c) &lt;= 1970) || (VALUE(vlocity_ins__EffectiveYear__c) &gt;= 2100)</errorConditionFormula>
    <errorDisplayField>vlocity_ins__EffectiveYear__c</errorDisplayField>
    <errorMessage>Effective Year must be a valid year.</errorMessage>
</ValidationRule>